[UPD] Text style classes change name to txt-b and txt-i (before: font-b and font-i)

--- a/cardstrap.css
+++ b/cardstrap.css
@@ -340,11 +340,11 @@ body{
 
 /* - - - - - TEXT STYLES - - - - -*/
 
-.font-b{
+.txt-b{
     font-weight: bold !important;
 }
 
-.font-i{
+.txt-i{
     font-style: italic !important;
 }
 
