--- a/cardstrap.css
+++ b/cardstrap.css
@@ -100,6 +100,7 @@ body{
     border: none;
     text-decoration: none;
     cursor: pointer;
+    bottom: 0;
 
 }
 
@@ -626,45 +627,75 @@ body{
 }
 
 .b-radius-1{
-    border-radius: 10px;
+    border-radius: 10px !important;
 }
 
 .bt-radius-1{
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 10px !important;
+    border-top-right-radius: 10px !important;
 }
 
 .bb-radius-1{
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px !important;
+    border-bottom-right-radius: 10px !important;
+}
+
+.bl-radius-1{
+    border-bottom-left-radius: 10px !important;
+    border-top-left-radius: 10px !important;
+}
+
+.br-radius-1{
+    border-bottom-right-radius: 10px !important;
+    border-top-right-radius: 10px !important;
 }
 
 .b-radius-2{
-    border-radius: 20px;
+    border-radius: 20px !important;
 }
 
 .bt-radius-2{
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-top-left-radius: 20px !important;
+    border-top-right-radius: 20px !important;
 }
 
 .bb-radius-2{
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px !important;
+    border-bottom-right-radius: 20px !important;
+}
+
+.bl-radius-2{
+    border-bottom-left-radius: 20px !important;
+    border-top-left-radius: 20px !important;
+}
+
+.br-radius-2{
+    border-bottom-right-radius: 20px !important;
+    border-top-right-radius: 20px !important;
 }
 
 .b-radius-3{
-    border-radius: 30px;
+    border-radius: 30px !important;
 }
 
 .bt-radius-3{
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
+    border-top-left-radius: 30px !important;
+    border-top-right-radius: 30px !important;
 }
 
 .bb-radius-3{
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px !important;
+    border-bottom-right-radius: 30px !important;
+}
+
+.bl-radius-3{
+    border-bottom-left-radius: 30px !important;
+    border-top-left-radius: 30px !important;
+}
+
+.br-radius-3{
+    border-bottom-right-radius: 30px !important;
+    border-top-right-radius: 30px !important;
 }
 
 
@@ -1099,13 +1130,178 @@ body{
 }
 
 
+/* - - - - - WIDTHS- - - - -*/
+
+.w-0{
+    width: 0 !important;
+}
+
+.w-5{
+    width: 5%px!important;
+}
+
+.w-10{
+    width: 10px !important;
+}
+
+.w-15{
+    width: 15px !important;
+}
+
+.w-20{
+    width: 20px !important;
+}
+
+.w-25{
+    width: 25px !important;
+}
+
+.w-30{
+    width: 30px !important;
+}
+
+.w-35{
+    width: 35px !important;
+}
+
+.w-40{
+    width: 40px !important;
+}
+
+.w-45{
+    width: 45px !important;
+}
+
+.w-50{
+    width: 50px !important;
+}
+
+.w-100{
+    width: 100px !important;
+}
+
+.w-150{
+    width: 150px !important;
+}
+
+.w-200{
+    width: 200px !important;
+}
+
+.w-250{
+    width: 250px !important;
+}
+
+.w-300{
+    width: 300px !important;
+}
+
+.w-350{
+    width: 350px !important;
+}
+
+.w-400{
+    width: 400px !important;
+}
+
+.w-450{
+    width: 450px !important;
+}
+
+.w-500{
+    width: 500px !important;
+}
+
+.w-550{
+    width: 550px !important;
+}
 
 
+/* - - - - - HEIGHTS- - - - -*/
 
+.h-0{
+    height: 0px !important;
+}
 
+.h-5{
+    height: 5px !important;
+}
 
+.h-10{
+    height: 10px !important;
+}
 
+.h-15{
+    height: 15px !important;
+}
 
+.h-20{
+    height: 20px !important;
+}
+
+.h-25{
+    height: 25px !important;
+}
+
+.h-30{
+    height: 30px !important;
+}
+
+.h-35{
+    height: 35px !important;
+}
+
+.h-40{
+    height: 40px !important;
+}
+
+.h-45{
+    height: 45px !important;
+}
+
+.h-50{
+    height: 50px !important;
+}
+
+.h-100{
+    height: 100px !important;
+}
+
+.h-150{
+    height: 150px !important;
+}
+
+.h-200{
+    height: 200px !important;
+}
+
+.h-250{
+    height: 250px !important;
+}
+
+.h-300{
+    height: 300px !important;
+}
+
+.h-350{
+    height: 350px !important;
+}
+
+.h-400{
+    height: 400px !important;
+}
+
+.h-450{
+    height: 450px !important;
+}
+
+.h-500{
+    height: 500px !important;
+}
+
+.h-550{
+    height: 550px !important;
+}
 
 
 
